refactor(harness): flatten session model and API contract